<resources>
    <string name="app_name">GulpGulp</string>
    <string name="toolbar_option">option</string>
    <string name="toolbar_title_empty"> </string>

    <!-- CalendarFragment -->
    <string name="calendar_edit_btn">누락된 음료 추가</string>
    <string name="calendar_detail_no_amount">섭취량 없음</string>
    <string name="calendar_detail_amount">총 섭취량: %dml</string>
    <string name="calendar_delete_dialog_title">정말 지우시겠습니까?</string>
    <string name="calendar_delete_dialog_positive">예</string>
    <string name="calendar_delete_dialog_negative">아니요</string>

    <!-- Preference -->
    <string name="preference_alert_title">알림</string>
    <string name="preference_drink_title">음료 관리</string>
    <string name="preference_drink_goal_title">목표 섭취량 관리</string>

    <!-- Preference Goal BottomSheetDialog -->
    <string name="goal_bottom_sheet_goal_title">목표 섭취량</string>
    <string name="goal_bottom_sheet_goal_commit">설정 완료</string>

    <!-- EditDrink -->
    <string name="editdrink_exist_title">만들어진 음료</string>
    <string name="editdrink_make_title">새로운 음료 만들기</string>

    <!-- EditDrink BottomSheetDialog -->
    <string name="bottom_sheet_icon_title">아이콘</string>
    <string name="bottom_sheet_drink_title">음료명</string>
    <string name="bottom_sheet_drink_title_hint">물</string>
    <string name="bottom_sheet_drink_amount">용량</string>
    <string name="bottom_sheet_drink_amount_hint">250</string>
    <string name="bottom_sheet_drink_unit">ml</string>
    <string name="bottom_sheet_commit">만들기</string>

    <!-- Unit -->
    <string name="unit_ml">%dml</string>
    <string name="unit_percent">%d%%</string>

</resources>