<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/text_icon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_icon_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_drink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/ic_bottle_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_drink_name"
        app:layout_constraintEnd_toEndOf="@id/text_icon_title"
        app:layout_constraintStart_toStartOf="@id/text_icon_title"
        app:layout_constraintTop_toBottomOf="@id/text_icon_title" />


    <TextView
        android:id="@+id/text_drink_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/bottom_sheet_drink_title"
        app:layout_constraintStart_toStartOf="@id/text_icon_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_drink_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:hint="@string/bottom_sheet_drink_title_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/text_amount_title"
        app:layout_constraintStart_toStartOf="@id/text_drink_title"
        app:layout_constraintTop_toBottomOf="@id/text_drink_title" />


    <TextView
        android:id="@+id/text_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/bottom_sheet_drink_amount"
        app:layout_constraintStart_toStartOf="@id/text_drink_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_drink_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/bottom_sheet_drink_amount_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_amount_title"
        app:layout_constraintTop_toBottomOf="@id/text_amount_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/bottom_sheet_drink_unit"
        app:layout_constraintBottom_toBottomOf="@id/edittext_drink_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edittext_drink_amount"
        app:layout_constraintTop_toTopOf="@id/edittext_drink_amount" />

    <TimePicker
        android:id="@+id/timepicker_drinkTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_drink"/>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bottom_sheet_commit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timepicker_drinkTime" />

</androidx.constraintlayout.widget.ConstraintLayout>